--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
     "@keystone-6/auth": "^2.0.0",
